task(): Sonar lint issue fixes